--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <header class="navbar">
-        <div class="nav-logo">MyPortfolio</div>
-        <nav class="nav-links">
+        <nav class="nav">
             <a href="#intro">Introduction</a>
             <a href="#projects">Projects</a>
             <a href="#videos">Videos</a>
@@ -20,81 +19,70 @@
         </nav>
     </header>
 
-    <!-- HERO SLIDER -->
+    <!-- HERO SECTION -->
     <section class="hero" id="intro">
-        <div class="slider">
-            <div class="slide active"
-                style="background-image: url('https://www.apple.com/v/home/ak/images/heroes/iphone15-pro/hero_iphone15pro__i70z9oz3hj2i_large.jpg');">
-                <div class="hero-text fade-in">
-                    <h1>Hello, I'm [Your Name]</h1>
-                    <p>Creative Developer & Storyteller</p>
-                </div>
-            </div>
-            <div class="slide"
-                style="background-image: url('https://www.apple.com/v/home/ak/images/heroes/macbook-air-m3/hero_macbook_air__f6n9w2u4devm_large.jpg');">
-            </div>
-            <div class="slide"
-                style="background-image: url('https://www.apple.com/v/home/ak/images/heroes/ipad-pro/hero_ipad_pro__bpt7a9d8sh42_large.jpg');">
-            </div>
+        <video class="hero-video" autoplay muted loop playsinline>
+            <source src="videos/short-clip-SIEMENS.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+        </video>
+
+        <div class="hero-overlay">
+            <h1 class="fade-in-up delay-1">Hello, I’m Gouranga</h1>
+            <p class="fade-in-up delay-2">I build things that tell stories and solve problems.</p>
         </div>
     </section>
 
+
+
     <!-- PROJECTS -->
-    <section class="projects fade-in" id="projects">
+    <section class="section" id="projects">
         <h2>Projects</h2>
-        <div class="grid">
-            <div class="card">
-                <h3>Health Plan Generator</h3>
-                <p>A tool to create personalized diet & fitness plans.</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="card">
-                <h3>Technical Writing Tool</h3>
-                <p>Automatically applies Siemens style guide to docs.</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
+        <div class="item">
+            <h3>Health Plan Generator</h3>
+            <p>Creates personalized diet and fitness plans based on user data.</p>
+            <a href="#">View Project →</a>
+        </div>
+        <div class="item">
+            <h3>Tech Writing Assistant</h3>
+            <p>Applies Siemens style guide to documents for clean, consistent output.</p>
+            <a href="#">View Project →</a>
         </div>
     </section>
 
     <!-- VIDEOS -->
-    <section class="videos fade-in" id="videos">
+    <section class="section" id="videos">
         <h2>Short Films & Videos</h2>
-        <div class="grid">
-            <div class="card">
-                <iframe width="100%" height="200" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video 1"
-                    allowfullscreen></iframe>
-                <p>Title: Exploring Creativity</p>
-            </div>
-            <div class="card">
-                <iframe width="100%" height="200" src="https://www.youtube.com/embed/ScMzIvxBSi4" title="Video 2"
-                    allowfullscreen></iframe>
-                <p>Title: Storytelling Through Film</p>
-            </div>
+        <div class="video-grid">
+            <iframe src="https://www.youtube.com/embed/ZvJGsgCrxXY?si=JC5Iu-8QXezApwa3" title="Video 1"
+                allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/qjCE02q_k-Q?si=ER1jDo4CKzM6KDm1" title="Video 2"
+                allowfullscreen></iframe>
         </div>
     </section>
 
     <!-- CV SECTION -->
-    <section class="fade-in" id="cv">
-        <h2>Download My CV</h2>
-        <div class="center">
-            <a class="btn" href="your-cv-link.pdf" target="_blank">📄 View CV</a>
-        </div>
+    <section class="section" id="cv">
+        <h2>CV</h2>
+        <p>Download or view my résumé here.</p>
+        <a class="button" href="your-cv-link.pdf" target="_blank">📄 View CV</a>
     </section>
 
-    <!-- CONTACT FORM -->
-    <section class="fade-in" id="contact">
-        <h2>Contact Me</h2>
+    <!-- CONTACT -->
+    <section class="section" id="contact">
+        <h2>Contact</h2>
         <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
-            <input type="text" name="name" placeholder="Your Name" required />
-            <input type="email" name="email" placeholder="Your Email" required />
-            <textarea name="message" placeholder="Your Message" required></textarea>
-            <button type="submit" class="btn">Send Message</button>
+            <input type="text" name="name" placeholder="Name" required />
+            <input type="email" name="email" placeholder="Email" required />
+            <textarea name="message" placeholder="Message" required></textarea>
+            <button type="submit">Send</button>
         </form>
     </section>
 
     <footer>
-        <p>© 2025 Your Name. Inspired by Apple.</p>
+        <p>© 2025 [Your Name]. Portfolio inspired by Apple.</p>
     </footer>
+
+    <button id="backToTop">↑</button>
 
     <script src="styleApple.js"></script>
 </body>
