add-changes-hero-image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>RookieDev25.io</title>
     <link rel="stylesheet" href="styleApple.css" />
 </head>
 
@@ -79,7 +79,7 @@
     </section>
 
     <footer>
-        <p>© 2025 [Your Name]. Portfolio inspired by Apple.</p>
+        <p>© 2025 rookieDev25. Portfolio inspired by Apple.</p>
     </footer>
 
     <button id="backToTop">↑</button>
