--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RookieDev25.io</title>
     <link rel="stylesheet" href="styleApple.css" />
+    <link rel="icon" type="icons" href="icons/page-title_favicon.png" />
+
 </head>
 
 <body>
     <header class="navbar">
         <nav class="nav">
+
             <a href="#intro">Introduction</a>
             <a href="#projects">Projects</a>
             <a href="#videos">Videos</a>
@@ -79,7 +82,7 @@
     </section>
 
     <footer>
-        <p>© 2025 rookieDev25. Portfolio inspired by Apple.</p>
+        <p>© 2025 | rookieDev25</p>
     </footer>
 
     <button id="backToTop">↑</button>
