--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <header class="navbar">
         <nav class="nav">
 
-            <a href="#intro">Introduction</a>
             <a href="#projects">Projects</a>
-            <a href="#videos">Videos</a>
-            <a href="#cv">CV</a>
-            <a href="#contact">Contact</a>
+            <a href="#creatives">Creatives</a>
+            <!-- <a href="#contact">Contact</a> -->
+            <a href="https://www.linkedin.com/in/gourangabhattacherjee/">LinkedIn</a>
+            <a href="https://github.com/rookiedev25">GitHub</a>
+
+
         </nav>
     </header>
 
@@ -31,7 +33,7 @@
 
         <div class="hero-overlay">
             <h1 class="fade-in-up delay-1">Hello, I’m Gouranga</h1>
-            <p class="fade-in-up delay-2">I build things that tell stories and solve problems.</p>
+            <p class="fade-in-up delay-2">Real-world devs turn challenges into solutions.</p>
         </div>
     </section>
 
@@ -42,19 +44,33 @@
         <h2>Projects</h2>
         <div class="item">
             <h3>Health Plan Generator</h3>
-            <p>Creates personalized diet and fitness plans based on user data.</p>
-            <a href="#">View Project →</a>
+            <p>HealthGen is a minimal, that delivers customized health and wellness plans in seconds. Whether
+                your goal is weight loss, muscle gain, or improved overall health, HealthGen gives you tailored
+                recommendations based on
+                your inputs like health goals, activity levels, and personal requirements.</p>
+            <ul class="project-meta">
+                <strong>Status:</strong> ✅ Live Prototype available<br />
+                <strong>Tech Stack:</strong> HTML, CSS, JavaScript <br />
+            </ul>
+            <a href="https://rookiedev25.github.io/healthGen/">Click here for a Demo →</a>
         </div>
         <div class="item">
-            <h3>Tech Writing Assistant</h3>
-            <p>Applies Siemens style guide to documents for clean, consistent output.</p>
-            <a href="#">View Project →</a>
+            <h3>Tech Writer's Assistant</h3>
+            <p>Applies specific style guide to documents for clean, consistent output further integrated into User
+                Documentations</p>
+            <ul class="project-meta">
+                <strong>Status:</strong> 🚧 In Progress<br />
+                <strong>Tech Stack:</strong> 🚧 In Progress <br />
+            </ul>
+            <!-- <a href="#">View Project →</a> -->
         </div>
+
+
     </section>
 
     <!-- VIDEOS -->
-    <section class="section" id="videos">
-        <h2>Short Films & Videos</h2>
+    <section class="section" id="creatives">
+        <h2>Creatives</h2>
         <div class="video-grid">
             <iframe src="https://www.youtube.com/embed/ZvJGsgCrxXY?si=JC5Iu-8QXezApwa3" title="Video 1"
                 allowfullscreen></iframe>
@@ -65,21 +81,22 @@
 
     <!-- CV SECTION -->
     <section class="section" id="cv">
-        <h2>CV</h2>
+        <h2>My Resume</h2>
         <p>Download or view my résumé here.</p>
-        <a class="button" href="your-cv-link.pdf" target="_blank">📄 View CV</a>
+        <a class="button" href="documents/resume_Apr_2025.pdf" target="_blank">📄 View File</a>
     </section>
 
     <!-- CONTACT -->
-    <section class="section" id="contact">
+    <!-- <section class="section" id="contact">
         <h2>Contact</h2>
+
         <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
             <input type="text" name="name" placeholder="Name" required />
             <input type="email" name="email" placeholder="Email" required />
             <textarea name="message" placeholder="Message" required></textarea>
             <button type="submit">Send</button>
         </form>
-    </section>
+    </section> -->
 
     <footer>
         <p>© 2025 | rookieDev25</p>
