change in resume and page-title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RookieDev25.io</title>
+    <title>rookieDev25.io</title>
     <link rel="stylesheet" href="styleApple.css" />
     <link rel="icon" type="icons" href="icons/page-title_favicon.png" />
 
