add new project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rookieDev25.io</title>
     <link rel="stylesheet" href="styleApple.css" />
-    <link rel="icon" type="icons" href="icons/page-title_favicon.png" />
+    <!-- <link rel="icon" type="icons" href="icons/page-title_favicon.png" /> -->
 
 </head>
 
@@ -32,7 +32,7 @@
         </video>
 
         <div class="hero-overlay">
-            <h1 class="fade-in-up delay-1">Hello, I’m Gouranga</h1>
+            <h1 class="fade-in-up delay-1">Hello, I'm Gouranga</h1>
             <p class="fade-in-up delay-2">Real-world devs turn challenges into solutions.</p>
         </div>
     </section>
@@ -53,6 +53,17 @@
                 <strong>Tech Stack:</strong> HTML, CSS, JavaScript <br />
             </ul>
             <a href="https://rookiedev25.github.io/healthGen/">Click here for a Demo →</a>
+        </div>
+        <div class="item">
+            <h3>TypeMaster</h3>
+            <p>A responsive typing speed test tool that tracks WPM, accuracy, and characters typed in real time.
+                Features dark/light
+                mode, sentence validation, and multiple time modes. Built using HTML, CSS, and JavaScript.</p>
+            <ul class="project-meta">
+                <strong>Status:</strong> ✅ Live Prototype available<br />
+                <strong>Tech Stack:</strong> HTML, CSS, JavaScript <br />
+            </ul>
+            <a href="https://rookiedev25.github.io/typeMaster/">Click here for a Demo →</a>
         </div>
         <div class="item">
             <h3>Tech Writer's Assistant</h3>
