Add new buttons for Demo-links

--- a/index.html
+++ b/index.html
@@ -1,100 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rookieDev25.io</title>
     <link rel="stylesheet" href="styleApple.css" />
     <!-- <link rel="icon" type="icons" href="icons/page-title_favicon.png" /> -->
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header class="navbar">
-        <nav class="nav">
-
-            <a href="#projects">Projects</a>
-            <a href="#creatives">Creatives</a>
-            <!-- <a href="#contact">Contact</a> -->
-            <a href="https://www.linkedin.com/in/gourangabhattacherjee/">LinkedIn</a>
-            <a href="https://github.com/rookiedev25">GitHub</a>
-
-
-        </nav>
+      <nav class="nav">
+        <a href="#projects">Projects</a>
+        <a href="#creatives">Creatives</a>
+        <!-- <a href="#contact">Contact</a> -->
+        <a href="https://www.linkedin.com/in/gourangabhattacherjee/"
+          >LinkedIn</a
+        >
+        <a href="https://github.com/rookiedev25">GitHub</a>
+      </nav>
     </header>
 
     <!-- HERO SECTION -->
     <section class="hero" id="intro">
-        <video class="hero-video" autoplay muted loop playsinline>
-            <source src="videos/short-clip-SIEMENS.mp4" type="video/mp4" />
-            Your browser does not support the video tag.
-        </video>
+      <video class="hero-video" autoplay muted loop playsinline>
+        <source src="videos/short-clip-SIEMENS.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
 
-        <div class="hero-overlay">
-            <h1 class="fade-in-up delay-1">Hello, I'm Gouranga</h1>
-            <p class="fade-in-up delay-2">Real-world devs turn challenges into solutions.</p>
-        </div>
+      <div class="hero-overlay">
+        <h1 class="fade-in-up delay-1">Hello, I'm Gouranga</h1>
+        <p class="fade-in-up delay-2">
+          Real-world devs turn challenges into solutions.
+        </p>
+      </div>
     </section>
-
-
 
     <!-- PROJECTS -->
     <section class="section" id="projects">
-        <h2>Projects</h2>
-        <div class="item">
-            <h3>Health Plan Generator</h3>
-            <p>HealthGen is a minimal, that delivers customized health and wellness plans in seconds. Whether
-                your goal is weight loss, muscle gain, or improved overall health, HealthGen gives you tailored
-                recommendations based on
-                your inputs like health goals, activity levels, and personal requirements.</p>
-            <ul class="project-meta">
-                <strong>Status:</strong> ✅ Live Prototype available<br />
-                <strong>Tech Stack:</strong> HTML, CSS, JavaScript <br />
-            </ul>
-            <a href="https://rookiedev25.github.io/healthGen/">Click here for a Demo →</a>
-        </div>
-        <div class="item">
-            <h3>TypeMaster</h3>
-            <p>A responsive typing speed test tool that tracks WPM, accuracy, and characters typed in real time.
-                Features dark/light
-                mode, sentence validation, and multiple time modes. Built using HTML, CSS, and JavaScript.</p>
-            <ul class="project-meta">
-                <strong>Status:</strong> ✅ Live Prototype available<br />
-                <strong>Tech Stack:</strong> HTML, CSS, JavaScript <br />
-            </ul>
-            <a href="https://rookiedev25.github.io/typeMaster/">Click here for a Demo →</a>
-        </div>
-        <div class="item">
-            <h3>Tech Writer's Assistant</h3>
-            <p>Applies specific style guide to documents for clean, consistent output further integrated into User
-                Documentations</p>
-            <ul class="project-meta">
-                <strong>Status:</strong> 🚧 In Progress<br />
-                <strong>Tech Stack:</strong> 🚧 In Progress <br />
-            </ul>
-            <!-- <a href="#">View Project →</a> -->
-        </div>
-
-
+      <h2>Projects</h2>
+      <div class="item">
+        <h3>Health Plan Generator</h3>
+        <p>
+          HealthGen is a minimal, that delivers customized health and wellness
+          plans in seconds. Whether your goal is weight loss, muscle gain, or
+          improved overall health, HealthGen gives you tailored recommendations
+          based on your inputs like health goals, activity levels, and personal
+          requirements.
+        </p>
+        <ul class="project-meta">
+          <strong>Status:</strong>
+          ✅ Live Prototype available<br />
+          <strong>Tech Stack:</strong>
+          HTML, CSS, JavaScript
+          <br />
+        </ul>
+        <button>
+          <a href="https://rookiedev25.github.io/healthGen/"
+            class="button-link">Click here for a Demo →</a
+          >
+        </button>
+      </div>
+      <div class="item">
+        <h3>TypeMaster</h3>
+        <p>
+          A responsive typing speed test tool that tracks WPM, accuracy, and
+          characters typed in real time. Features dark/light mode, sentence
+          validation, and multiple time modes. Built using HTML, CSS, and
+          JavaScript.
+        </p>
+        <ul class="project-meta">
+          <strong>Status:</strong>
+          ✅ Live Prototype available<br />
+          <strong>Tech Stack:</strong>
+          HTML, CSS, JavaScript
+          <br />
+        </ul>
+        <button>
+        <a href="https://rookiedev25.github.io/typeMaster/"
+          class="button-link">Click here for a Demo →</a
+        ></button>
+      </div>
+      <div class="item">
+        <h3>Tech Writer's Assistant</h3>
+        <p>
+          Applies specific style guide to documents for clean, consistent output
+          further integrated into User Documentations
+        </p>
+        <ul class="project-meta">
+          <strong>Status:</strong>
+          🚧 In Progress<br />
+          <strong>Tech Stack:</strong>
+          🚧 In Progress
+          <br />
+        </ul>
+        <!-- <a href="#">View Project →</a> -->
+      </div>
     </section>
 
     <!-- VIDEOS -->
     <section class="section" id="creatives">
-        <h2>Creatives</h2>
-        <div class="video-grid">
-            <iframe src="https://www.youtube.com/embed/ZvJGsgCrxXY?si=JC5Iu-8QXezApwa3" title="Video 1"
-                allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/qjCE02q_k-Q?si=ER1jDo4CKzM6KDm1" title="Video 2"
-                allowfullscreen></iframe>
-        </div>
+      <h2>Creatives</h2>
+      <div class="video-grid">
+        <iframe
+          src="https://www.youtube.com/embed/ZvJGsgCrxXY?si=JC5Iu-8QXezApwa3"
+          title="Video 1"
+          allowfullscreen
+        ></iframe>
+        <iframe
+          src="https://www.youtube.com/embed/qjCE02q_k-Q?si=ER1jDo4CKzM6KDm1"
+          title="Video 2"
+          allowfullscreen
+        ></iframe>
+      </div>
     </section>
 
     <!-- CV SECTION -->
     <section class="section" id="cv">
-        <h2>My Resume</h2>
-        <p>Download or view my résumé here.</p>
-        <a class="button" href="documents/resume_Apr_2025.pdf" target="_blank">📄 View File</a>
+      <h2>My Resume</h2>
+      <p>Download or view my résumé here.</p>
+      <a class="button" href="documents/resume_Apr_2025.pdf" target="_blank"
+        >📄 View File</a
+      >
     </section>
 
     <!-- CONTACT -->
@@ -110,12 +137,11 @@
     </section> -->
 
     <footer>
-        <p>© 2025 | rookieDev25</p>
+      <p>© 2025 | rookieDev25</p>
     </footer>
 
     <button id="backToTop">↑</button>
 
     <script src="styleApple.js"></script>
-</body>
-
+  </body>
 </html>
