--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- HERO SECTION -->
     <section class="hero" id="intro">
       <video class="hero-video" autoplay muted loop playsinline>
-        <source src="videos/short-clip-SIEMENS.mp4" type="video/mp4" />
+        <source src="videos/hero-section-video.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
 
@@ -119,7 +119,7 @@
     <section class="section" id="cv">
       <h2>My Resume</h2>
       <p>Download or view my résumé here.</p>
-      <a class="button" href="documents/resume_Apr_2025.pdf" target="_blank"
+      <a class="button" href="documents/resume-Apr25.pdf" target="_blank"
         >📄 View File</a
       >
     </section>
